refactor: Update image size and shape in about page

--- a/index.html
+++ b/index.html
@@ -4,7 +4,11 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>React App</title>
+        <title>
+            Portfólio
+        </title>
+        <link rel="icon" href="/src/assets/logo.jpg" type="image/png" />
+
     </head>
 
     <body>
